# stalonetray

./: meson.build
src/: debug.c  debug.h  main.c  settings.c  xembed.c  xinerama.c
